# finledger

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  docker-compose.full.yml  docker-compose.yml
core/: Dockerfile  alembic.ini  pyproject.toml  seed_demo.py  seed_revrec_demo.py
core/alembic/: env.py
core/alembic/versions/: 0001_schemas.py  0002_inbox_source_events.py  0003_ledger_accounts.py  0004_ledger_journal.py  0005_ledger_triggers.py  0006_fix_balance_trigger_variable.py  0007_recon_runs.py  0008_gl_export_runs.py  0009_revrec_schema_and_contracts.py  0010_revrec_performance_obligations.py  0011_revrec_recognition_runs.py  0012_revrec_recognition_events.py  0013_revrec_index_naming_and_run_je_idx.py  0014_revrec_obligation_consumption_fields.py  0015_revrec_usage_events.py  0016_revrec_obligation_payg_fields.py  0017_revrec_payg_reclassifications.py
core/src/finledger/: config.py  db.py  verify_chain.py
core/tests/integration/: conftest.py  test_balance_trigger.py  test_e2e_stripe_webhook.py  test_export_csv.py  test_idempotency.py  test_inbox_insert.py  test_posting_engine.py  test_recovery.py  test_revrec_api.py  test_revrec_consumption.py  test_revrec_consumption_zuora.py  test_revrec_engine.py  test_revrec_genesis_e2e.py  test_revrec_payg.py  test_revrec_payg_billing.py  test_stripe_recon.py  test_ui_smoke.py  test_verify_chain.py
core/tests/property/: strategies.py  test_inbox_replay.py  test_revrec_consumption_invariants.py  test_revrec_invariants.py  test_revrec_payg_invariants.py  test_trial_balance.py
docs/: DEMO.md  (+1 more)
(+71 files in other folders)
