[project]
name = "finledger"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "sqlalchemy>=2.0",
  "asyncpg>=0.30",
  "psycopg[binary]>=3.2",
  "alembic>=1.14",
  "apscheduler>=3.10",
  "jinja2>=3.1",
  "stripe>=11.0",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "hypothesis>=6.118",
  "ruff>=0.7",
  "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/finledger"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
ignore = ["E741"]  # allow short loop vars like `l` in ledger comprehensions

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["src", "."]
testpaths = ["tests"]
